# KnotzFlix

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_SIGNING_GUIDE.md  DEPLOYMENT_SUMMARY.md  IMPORT_FIX.md  PRODUCTION_READY.md  README.md  SECURITY_DEPLOYMENT_FINAL.md  SECURITY_FIXES.md  UX_ENHANCEMENTS.md  pyproject.toml  tmp2.txt  tmp_block.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
DOCS/: DevChecklist.md  PRD.md  Packaging.md  prompt.md
domain/: __init__.py  models.py
infra/: __init__.py  cache.py  config.py  db.py  exec_paths.py  ffprobe.py  fingerprinter.py  ipc_focus.py  library_service.py  logging_config.py  parser.py  paths.py  playback.py  scanner.py  single_instance.py  thumbnails.py  watcher.py
scripts/: build_pyinstaller.py  debug_parser.py  run_app.py  run_unittests.py
tests/: test_db.py  test_ffprobe.py  test_fingerprinter.py  test_ipc_focus.py  test_library_service.py  test_parser_corpus.py  test_paths_config_logging.py  test_playback.py  test_poster_heuristics_golden.py  test_poster_scoring_golden.py  test_sanity.py  test_scanner_parser.py  test_thumbnails.py  test_thumbnails_golden.py
tests/fixtures/: ffprobe_sample.json
ui/: __init__.py  app.py  main_window.py
ui/models/: movie_list_model.py
ui/views/: by_folder.py  details_dialog.py  poster_grid.py
ui/widgets/: about_dialog.py  help_dialog.py  splash.py  toast.py  welcome_dialog.py
