[project]
name = "knotzflix"
version = "0.1.0"
description = "KnotzFLix: local-first, offline Netflix-style movie manager (PyQt6 + SQLite)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
  { name = "KnotzFLix Team" }
]
dependencies = [
  "PyQt6>=6.5,<7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0.0",
  "ruff>=0.5.0",
  "mypy>=1.6.0",
  "pytest-cov>=4.0.0"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"
